--- a/app/src/main/res/drawable/rc_logo.xml
+++ b/app/src/main/res/drawable/rc_logo.xml
@@ -1,4 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Background shape -->
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="#FFFF"/>
+            <padding
+                android:left="16dp"
+                android:top="16dp"
+                android:right="16dp"
+                android:bottom="16dp"/>
+        </shape>
+    </item>
 
-</selector>
+    <!-- Logo overlay -->
+    <item>
+        <bitmap
+            android:src="@drawable/logo3"
+            android:gravity="center"/>
+    </item>
+</layer-list>
