--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="379dp"
-        android:layout_height="621dp"
+        android:layout_height="780dp"
         android:background="@drawable/ic_cover"
         android:orientation="vertical"
         android:padding="16dp">
@@ -30,9 +30,35 @@
             android:textColor="#000"
             android:textSize="24sp" />
 
+        <TextView
+            android:id="@+id/UsernameVaild"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/righteous"
+            android:textColor="#D0FF0B0B"
+            android:textSize="12sp" />
+
+        <EditText
+            android:id="@+id/editUsername"
+            android:layout_width="344dp"
+            android:layout_height="52dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/ic_field_cover"
+            android:hint="@string/Username"
+            android:inputType="text"
+            android:padding="8dp" />
+
+        <TextView
+            android:id="@+id/EmailVaild"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/righteous"
+            android:textColor="#D0FF0B0B"
+            android:textSize="12sp" />
+
         <EditText
             android:id="@+id/editTextEmail"
-            android:layout_width="344dp"
+            android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/ic_field_cover"
@@ -40,13 +66,39 @@
             android:inputType="text"
             android:padding="8dp" />
 
+        <TextView
+            android:id="@+id/PasswordVaild"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/righteous"
+            android:textColor="#D0FF0B0B"
+            android:textSize="12sp" />
+
         <EditText
-            android:id="@+id/editTextPassword"
+            android:id="@+id/editTextPasswordl"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/ic_field_cover"
+            android:hint="@string/password"
+            android:inputType="text"
+            android:padding="8dp" />
+
+        <TextView
+            android:id="@+id/PasswordConVaild"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/righteous"
+            android:textColor="#D0FF0B0B"
+            android:textSize="12sp" />
+
+        <EditText
+            android:id="@+id/ConfirmPassword"
             android:layout_width="346dp"
             android:layout_height="49dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/ic_field_cover"
-            android:hint="@string/password"
+            android:hint="@string/Confirm"
             android:inputType="textPassword"
             android:padding="8dp" />
 
@@ -54,7 +106,7 @@
             android:id="@+id/button_register"
             android:layout_width="344dp"
             android:layout_height="58dp"
-            android:background="@drawable/card_background"
+            android:background="@drawable/ic_button_cover"
             android:backgroundTint="#FFCA28"
             android:padding="16dp"
             android:text="@string/register"
